Fix #41 Incorrect rendering of image preview div on mobile

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -158,3 +158,8 @@ body {
     margin-bottom: 8px;
 }
 
+#imgpreview {
+    margin-left: auto;
+    margin-right: auto;
+    display: none;
+}
